<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".local_o_usuario"
    android:background="#fece2f"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:fontFamily="@font/helvetica_now_text_ext_bd_ita"
        android:text="@string/local_o_usuario"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp" />


    <Button
        android:id="@+id/buttonLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:elevation="5dp"
        android:text="@string/local"
        android:textColor="#ffffff"
        />

    <Button
        android:id="@+id/buttonUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:elevation="5dp"
        android:text="@string/usuario"
        android:textColor="#ffffff"
        />


</LinearLayout>