<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:background="#fece2f"
    tools:context=".splashscreen.splashscreen"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_height="200dp"
        android:layout_width="200dp"
        tools:ignore="MissingConstraints"
        app:srcCompat="@drawable/qnet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:transitionName="logo_imagen"
        android:contentDescription="@string/qnet_imagen"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="164dp"
        android:layout_marginStart="10dp"
        android:id="@+id/imagen_qnet" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:transitionName="logo_text"
        android:layout_marginTop="12dp"
        android:id="@+id/Q.net"
        app:layout_constraintTop_toBottomOf="@+id/imagen_qnet"
        android:textSize="50sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:text="@string/q_net"
        android:fontFamily="@font/racing_sans_one"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/empresa"
        app:layout_constraintTop_toBottomOf="@+id/Q.net"
        android:textSize="24sp"
        android:textAlignment="center"
        android:text="@string/southware"
        android:fontFamily="@font/roboto_thin"/>

</androidx.constraintlayout.widget.ConstraintLayout>