<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".loginregister_usuario.register"
    android:orientation="vertical"
    android:background="#fece2f"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_back_black_24dp" />
            
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crear_cuenta"
            android:fontFamily="@font/helvetica_now_text_ext_bd_ita"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp"
            android:layout_marginTop="20dp"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_completo"
                app:startIconDrawable="@drawable/ic_create_black_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:boxStrokeWidthFocused="2dp">

                <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:inputType="text">
                </com.google.android.material.textfield.TextInputEditText>
                
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                app:startIconDrawable="@drawable/ic_person_black_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:boxStrokeWidthFocused="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailSubject">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_electr_nico"
                app:startIconDrawable="@drawable/ic_mail_black_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:boxStrokeWidthFocused="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contra"
                app:startIconDrawable="@drawable/ic_lock_outline_black_24dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:boxStrokeWidthFocused="2dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sig_btn"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginTop="20dp"
                android:elevation="5dp" />





        </LinearLayout>


    </LinearLayout>
    

</ScrollView>