<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".loginregister.new_password_fragment"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <ImageView

            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="5dp"
            app:startIconTint="@color/colorPrimaryDark"
            android:src="@drawable/ic_baseline_account_box_24"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nueva_contrase_a"
            android:fontFamily="@font/helvetica_now_text_ext_bd_ita"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/su_cuenta_ha_sido_verificada_correctamente_ingrese_su_nueva_contrase_a"
            android:fontFamily="@font/helvetica_now_text_light"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nueva Contraseña"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_lock_outline_black_24dp"
            app:startIconTint="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newpassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirme_contrase_a"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryDark"
            app:hintTextColor="@color/colorPrimaryDark"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_lock_outline_black_24dp"
            app:startIconTint="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sig_btn"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="20dp"
            android:elevation="5dp" />



    </LinearLayout>



</ScrollView>